--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,29 +1,39 @@
 [package]
 name = "wagon-gll"
-version.workspace = true
-authors.workspace = true
-license.workspace = true
-categories.workspace = true
-keywords.workspace = true
-repository.workspace = true
-edition.workspace = true
+version = "1.0.0"
+authors = ["Rafael Dulfer"]
+license = "Apache"
+categories = ["parsing", "parser-implementations"]
+keywords = ["parsing", "gll", "weighted attribute grammar"]
+repository = "https://github.com/Rafaeltheraven/wagon-gll"
+edition = "2021"
+documentation = "https://dulfer.be/wagon/wagon-gll"
 description = "GLL library for WAGon generated parsers."
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-derivative = {workspace = true}
-indexmap = {workspace = true}
-ordered-float = {workspace = true}
-petgraph = {workspace = true}
-thiserror = {workspace = true}
+derivative = "2.2.0"
+indexmap = "2.0.2"
+ordered-float = "3.9.1"
+petgraph = {version = "0.6.3", default-features = false}
+thiserror = "1.0.57"
 rand_core = "0.6.4"
-wagon-ident = {workspace = true}
-wagon-value = {workspace = true}
-wagon-utils = {workspace = true}
-wagon-macros = {workspace = true}
+wagon-ident = {path = "../wagon/wagon-ident"}
+wagon-value = {path = "../wagon/wagon-value"}
+wagon-utils = {path = "../wagon/wagon-utils"}
+wagon-macros = {path = "../wagon/wagon-macros"}
 regex-automata = "0.4.4"
 v_latexescape = "0.14.8"
 
-[lints]
-workspace = true
+[lints.rust]
+unsafe_code = "forbid"
+
+[lints.clippy]
+enum_glob_use = "deny"
+pedantic = "warn"
+nursery = "deny"
+unwrap_used = "deny"
+expect_used = "warn"
+module_name_repetitions = "allow"
+panic = "warn"
