--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "1.0.0"
 authors = ["Rafael Dulfer"]
 license = "Apache-2.0"
 categories = ["parsing", "parser-implementations"]
-keywords = ["parsing", "gll", "weighted attribute grammar"]
+keywords = ["parsing", "gll", "WAG", "grammars"]
 repository = "https://github.com/Rafaeltheraven/wagon-gll"
 edition = "2021"
 documentation = "https://dulfer.be/wagon/wagon-gll"
